--- a/Python/divar/templates/user/index.html
+++ b/Python/divar/templates/user/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <form action="{{url_for('user_profile')}}" id="form-upload-user" method="post" class="text-center">
-          {{form.hidden_tag()}}
+          {{form.csrf_token()}}
           <div id="form-upload" class="rounded">
             <label
               id="input_area_file"
@@ -95,22 +95,26 @@
                   <small class="text-muted" id="filename_placeholder"> فایل خود را انتخاب کنید </small>
                 </div>
                 {{form.file(id="input_file",enctype="multipart/form-data", class="form-control d-none",
-                accept="image/png, image/jpg, image/jpeg")}}
+                accept="image/*")}}
               </div>
             </label>
           </div>
 
 
-          <div class="progress mt-2">
-              <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger"
+          <div class="progress mt-2 w-100">
+              <div class="text-center progress-bar progress-bar-striped progress-bar-animated bg-danger"
                role="progressbar" aria-label="Animated striped example"
-               aria-valuenow="0" aria-valuemin="0"
-               aria-valuemax="100" style="width: 0%"></div>
+               aria-valuemin="0"
+               aria-valuemax="100"
+               id="progress-bar-spinner" >
+              <span id="progress-value"></span>
+              </div>
           </div>
+
 
           <div
             class="w-100 my-2 d-flex justify-content-between align-items-center">
-            <button id="cancell-btn" class="btn btn-primary disabled"  type="button">
+            <button id="cancell-btn" class="btn btn-primary" disabled type="button">
               لغو آپلود
             </button>
             {{form.submit(id="upload-btn",class="btn btn-primary",value="آپلود فایل ")}}
@@ -136,6 +140,9 @@
     const upload_btn = document.querySelector("#upload-btn");
     const filename_placeholder = document.querySelector("#filename_placeholder");
     
+    const btn_cancell = document.querySelector("#cancell-btn");
+    btn_cancell.disabled=true;
+    
     const loading_animation = document.querySelector("#loading-animation");
     loading_animation.classList.add("d-none");
 
@@ -147,7 +154,11 @@
     
     function alert_show(message,categoty)
     {
-        alert.classList.remove("d-none");
+        if (alert.classList.contains("d-none"))
+        {
+            alert.classList.remove("d-none");
+            console.log("deleted");
+        }
         let alert_message = `
         <div class="alert alert-${category} d-flex show fade justify-content-between align-items-center">
             <span class="btn btn-close" data-bs-dismiss="alert"></span>
@@ -155,38 +166,84 @@
             </div>`;
             
             alert.innerHTML = alert_message;
-            console.log(alert.innerHTML);
     }
 
-        
     let file_Selected = false;
     upload_btn.disabled = true;
 
-    input_form.oninput = (e)=>{
-        if(input_file.value &&
-         (input_file.files[0].type == "image/png" || input_file.type == ", image/jpeg" || input_file.type == ", image/jpg"))
-        {
-            file_Selected = true;
-            upload_btn.disabled = false;
-            filename_placeholder.innerHTML = ` ${input_file.files[0].name }  : فایل  `;
-            progress_bar.classList.remove("d-none");
-            loading_animation.classList.remove("d-none");
-        }
-        else
-        {
-            const formats = "PNG/JPG"
-            const alert =`فایل انتخاب شده دارای فرمت نامعتبر است 
-            <br/>
-             فرمت های معتبر ${formats}`;
-            alert_show(message=alert,category="warning")
-            e,preventDefault();
-        }
+    // cancell btn
+    btn_cancell.addEventListener("click",(e)=>{
+                file_Selected = false;
+                upload_btn.disabled = true;
+                filename_placeholder.innerHTML = ` فایل خود را انتخاب کنید  `;
+                if (!(progress_bar.classList.contains("d-none")))
+                {
+                    progress_bar.classList.add("d-none");
+                }
+                if(!(loading_animation.classList.contains("d-none")))
+                {
+                    loading_animation.classList.add("d-none");
+                }  
+      
+                document.querySelector("#input_area_file").disabled=false;
+                upload_btn.disabled=true;
+                xhr = null;
+                formdata = null;
+                btn_cancell.disabled = true;
+    })
 
+
+    // input form
+    input_form.oninput = function(e){
+        if(input_file.value &&  ((input_file.files[0].type).indexOf("image/") != -1))
+        {
+                file_Selected = true;
+                btn_cancell.disabled = false;
+                upload_btn.disabled = false;
+                filename_placeholder.innerHTML = ` ${input_file.files[0].name }  : فایل  `;
+                filename_placeholder.innerHTML += ` <br/>  ${(input_file.files[0].size / (1024 * 1024)).toFixed(2) } mb`;
+
+                if (progress_bar.classList.contains("d-none"))
+                {
+                    progress_bar.classList.remove("d-none");
+                    console.log(progress_bar.classList);
+                }
+                if(!(alert.classList.contains("d-none")))
+                {
+                    alert.classList.add("d-none");
+                }
+                if(!(loading_animation.classList.contains("d-none")))
+                {
+                    loading_animation.classList.remove("d-none");
+                }
+            }
+            else
+            {
+                file_Selected = false;
+                upload_btn.disabled = true;
+                filename_placeholder.innerHTML = ` فایل خود را انتخاب کنید  `;
+                if (!(progress_bar.classList.contains("d-none")))
+                {
+                    progress_bar.classList.add("d-none");
+                }
+                if(!(loading_animation.classList.contains("d-none")))
+                {
+                    loading_animation.classList.add("d-none");
+                }
+                const alert =`فایل انتخاب شده دارای فرمت نامعتبر است `;
+                alert_show(message=alert,category="warning")
+                e.preventDefault();
+        }
+        
     };
+    
 
+    // submit form
     input_form.onsubmit = (event)=>{
         if (file_Selected)
         {
+          // cancell user submit
+          // for submiting via ajax
             event.preventDefault();    
         }
         else if(!file_Selected)
@@ -194,9 +251,54 @@
             alert_show("فایلی انتخاب نشده است","danger");
             event.preventDefault();    
         }
-        event.preventDefault();    
     }
 
+    // upload btn
+    upload_btn.addEventListener("click",function(e){
+    if (loading_animation.classList.contains("d-none"))
+    {
+      loading_animation.classList.remove("d-none");
+      console.log(loading_animation.classList);
+    }
+    
+    let formdata  = new FormData();
+    formdata.append("file", input_file.files[0]);
+    formdata.append("csrf_token", document.querySelector('#csrf_token').value ); 
+    document.querySelector("#input_area_file").disabled=true;
+    upload_btn.disabled=true;
+
+    let xhr = new XMLHttpRequest();
+    xhr.upload.addEventListener("progress", function(e){
+
+        let percentage = (e.loaded / e.total) * 100 ;
+        if(Math.floor(percentage) === 100)
+        {
+          console.log("done");
+          loading_animation.classList.add("d-none");
+          loading_animation.classList.add("d-none");
+          progress_bar.classList.add("d-none");
+          document.querySelector("#input_area_file").disabled=false;
+          upload_btn.disabled=false;
+          alert_show(message="عکس با موفقیت آپدیت گردید",category="success")
+        }
+        document.querySelector("#progress-bar-spinner").setAttribute("style", "width:" + Math.round(percentage) + "%" );
+        document.querySelector("#progress-bar-spinner").setAttribute("aria-valuenow", Math.round(percentage));
+        document.querySelector("#progress-value").innerHTML=Math.floor(percentage) + "%";
+        // console.log(percentage);
+        // console.log("style", "width:" + Math.round(percentage) + "%" );
+        // progress_bar.style.width = Math.round(percentage) + "%";
+    })
+
+    xhr.open("POST" ,location.href);
+    xhr.send(formdata);
+    xhr = null;
+    formdata = null;
+    
+    
+
+
+
+  })
 
 </script>
 
