--- a/Python/divar/templates/home-index/index.html
+++ b/Python/divar/templates/home-index/index.html
@@ -390,8 +390,10 @@
             href="#"><i class="bi bi-chat-fill pe-3 icon-btn-res-bottom "></i><span>چت</span>
           </a>
 
-          <a class="  d-flex align-items-center text-muted h-100 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button btn-res-bottom"
-            href="#"><i class="bi bi-person-fill pe-3  icon-btn-res-bottom "></i><span>دیوار من</span>
+          <a data-bs-toggle="modal" data-bs-target="#modal-mudivar-mini" class=" d-flex align-items-center text-muted h-100 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button btn-res-bottom"
+            href="#">
+              <i class="bi bi-person-fill pe-3 icon-btn-res-bottom"></i>
+              <span >دیوار من</span>
           </a>
 
         </div>
@@ -722,6 +724,17 @@
     </div>
   </div>
   <!-- modal of categories -->
+
+
+  <div class="modal" id="modal-mudivar-mini">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">دیوار من</div>
+        <div class="modal-body">as</div>
+        <div class="modal-footer">as</div>
+      </div>
+    </div>
+  </div>
 
 
 
