--- a/Python/divar/templates/home-index/index.html
+++ b/Python/divar/templates/home-index/index.html
@@ -85,7 +85,7 @@
                 <!-- دیوار من dropdown -->
                 <div class="dropdown-menu text-muted fs-11  ">
                   {% if user_status.login == True %}
-                  <a href="" class="dropdown-item px-4 text-black-muted-cs border-bottom transition-bgcolor-1s ">
+                  <a href="{{ url_for('profile') }}" class="dropdown-item px-4 text-black-muted-cs border-bottom transition-bgcolor-1s ">
                     <div class="fs-11 ">
                       <div class="px-1 py-2">
                         <span>{{user_status.name}}</span>
@@ -135,10 +135,10 @@
                   <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom transition-bgcolor-1s ">
                     <span>دیوار برای کسب و کار ها</span>
                     <i class="bi bi-shop-window"></i>
-                  </a>
+                  </a> 
 
                   {% if user_status.login == True %}
-                    <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 transition-bgcolor-1s ">
+                    <a href="{{ url_for('logout') }}" class="dropdown-item px-5 text-black-muted-cs py-3 transition-bgcolor-1s ">
                       <span>خروج</span>
                       <i class="bi bi-box-arrow-right"></i>
                     </a>
@@ -728,9 +728,12 @@
 
   <div class="modal" id="modal-mudivar-mini">
     <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">دیوار من</div>
-        <div class="modal-body">as</div>
+      <div class="modal-content" dir="rtl">
+        <div class="modal-header text-muted">
+          <span class="fs-5">دیوار من</span>
+          <i class="bi bi-person-square"></i>
+        </div>
+        <div class="modal-body"></div>
         <div class="modal-footer">as</div>
       </div>
     </div>
