divar init file

--- a/Python/divar/static/profile_user/style.css
+++ b/Python/divar/static/profile_user/style.css
@@ -12,3 +12,11 @@
 .upload-icon{
     font-size: 5rem;;
 }
+
+@media (max-width:507px)
+{
+    .user_information{
+        font-size:0.7rem;
+    }
+    
+}
